# cmake_tutorial

./: .gitignore  CMakeLists.txt  README.md  backup_makefile  memo.md
include/: factorial.hpp  gregory.hpp  ramanujan.hpp  viete.hpp
src/: factorial.cpp  gregory.cpp  main.cpp  ramanujan.cpp  viete.cpp
